<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".FormCadastrar">

    <TextView
        android:id="@+id/title_tela_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/title_cadastro"
        android:textColorHint="@color/white"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"/>

    <View
        android:id="@+id/contcomp"
        style="@style/ContComp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_tela_cadastro"
        />

    <EditText
        android:id="@+id/edit_name"
        style="@style/Edit_text"
        android:hint="@string/name_sobrename"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:inputType="text"
        android:maxLength="25"
        android:drawableEnd="@drawable/ic_person"
        app:layout_constraintTop_toTopOf="@id/contcomp"
        app:layout_constraintStart_toStartOf="@id/contcomp"
        app:layout_constraintEnd_toEndOf="@id/contcomp"
        />

    <EditText
        android:id="@+id/edit_email"
        style="@style/Edit_text"
        android:hint="@string/email"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:inputType="textEmailAddress"
        android:maxLength="30"
        android:drawableEnd="@drawable/ic_email"
        app:layout_constraintTop_toBottomOf="@id/edit_name"
        app:layout_constraintStart_toStartOf="@id/contcomp"
        app:layout_constraintEnd_toEndOf="@id/contcomp"
        />

    <EditText
        android:id="@+id/edit_senha"
        style="@style/Edit_text"
        android:hint="@string/senha"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:inputType="numberPassword"
        android:maxLength="16"
        android:drawableEnd="@drawable/ic_eye"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        app:layout_constraintStart_toStartOf="@id/contcomp"
        app:layout_constraintEnd_toEndOf="@id/contcomp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cadastrar"
        style="@style/Button"
        app:layout_constraintTop_toBottomOf="@id/contcomp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:hint="@string/cadastrar"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAllCaps="false"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
